# GeneXpressor

./: .gitignore  README.md  dcdas  pyproject.toml  requirements.txt
src/genexpressor/: cli.py  runner.py
src/genexpressor/resources/: deseq2_runner.R
tests/: test_import.py
